export default {
  barbell: 'Barra',
  dumbbells: 'Halteres',
  machine: 'Máquina',
  cable: 'Cabo',
  bodyweight: 'Peso Corporal',
  smithMachine: 'Smith',
  kettlebell: 'Kettlebell',
  resistanceBand: 'Elástico',
  weightPlate: 'Anilha',
  suspensionTrainer: 'Suspensão',
  other: 'Outro',
  ezCurlBar: 'Barra W',
  treadmill: 'Esteira',
  stationaryBike: 'Bicicleta Ergométrica',
  rowingMachine: 'Remador',
  elliptical: 'Elíptico',
  stairClimber: 'Escada',
};
