export default {
  progress: 'Evolução',
  edit: 'Editar exercício',
  viewingAthlete: {
    named: 'Dados de {{name}}',
    generic: 'Dados do atleta',
  },
  archived: {
    at: 'Arquivado em {{when}}.',
...
